# grpc-ecs

./: .gitignore  README.md
cdk/: cdk.json  index.ts  package-lock.json  package.json  tsconfig.json
client-app/: Cargo.toml  Dockerfile  build.gradle  build.rs
client-app/src/: main.rs
client-app/src/main/java/com/literalice/sophie/grpcecs/client/: ClientApplication.java  HealthCheckController.java  TaskController.java
client-app/src/test/java/com/literalice/sophie/grpcecs/client/: ClientApplicationTests.java
proto/: ecstask.proto
server-app/: Cargo.toml  Dockerfile
server-app/src/: main.rs
