[package]
name = "grpc-client"
version = "0.1.0"
authors = ["Masatoshi Hayashi <m@literalice.com>"]
edition = "2018"

[[bin]] # Bin to run the gRPC client
name = "grpc-client"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
tonic = "0.3"
tonic-health = "0.2.0"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
rweb = "0.5"
serde = { version = "1.0.57" }
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.3"
